feat(security): remove default admin password and enforce first-run setup